# git-stats

./: CHANGELOG.md  Cargo.toml  Justfile  README.md  cliff.toml  package.json
.changeset/: calm-onions-search.md  config.json  fiery-eagles-attend.md
.github/workflows/: binaries.yml  release.yml
src/: main.rs
