[package]
name = "git-stats"
version = "0.1.20"
edition = "2024"
authors = ["Luke Hsiao <luke@hsiao.dev>"]
description = "A tool for getting aggregated commit stats"
repository = "https://github.com/lukehsiao/git-stats"
homepage = "https://github.com/lukehsiao/git-stats"
license = "BlueOak-1.0.0"
keywords = ["git", "stats"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.34", features = ["wrap_help", "derive"] }
rayon = "1.10.0"
tabled = { version = "0.18.0", features = ["ansi"] }
xshell = "0.2.7"
yansi = { version = "1.0.1", features = ["detect-tty", "detect-env"] }
